# aiopinboard

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.md  LICENSE  README.md  noxfile.py  pyproject.toml  requirements_test.txt
.github/: pull_request_template.md
.github/workflows/: ci.yaml  test.yml
aiopinboard/: __init__.py  api.py  bookmark.py  errors.py  note.py  tag.py
aiopinboard/helpers/: __init__.py  bookmark.py  types.py
examples/: test_api.py
script/: test
tests/: common.py  conftest.py  test_api.py  test_bookmark_api.py  test_errors.py  test_note_api.py  test_tag_api.py
tests/fixtures/: __init__.py  error_response.json  error_response.xml  notes_get_response.json  notes_get_response.xml  posts_all_response.json  posts_all_response.xml  posts_dates_response.json  posts_dates_response.xml  posts_get_empty_response.json  posts_get_empty_response.xml  posts_get_response.json  posts_get_response.xml  posts_suggest_response.json  posts_suggest_response.xml  posts_update_response.json  posts_update_response.xml  tags_delete_response.json  tags_get_response.json  tags_get_response.xml
