[build-system]
requires = ["setuptools >= 35.0.2", "wheel >= 0.29.0", "poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
combine_as_imports = true
default_section = "THIRDPARTY"
force_grid_wrap = 0
force_sort_within_sections = true
forced_separate = "tests"
include_trailing_comma = true
indent = "    "
known_first_party = "aiopinboard,examples,tests"
line_length = 88
multi_line_output = 3
not_skip = "__init__.py"
sections = "FUTURE,STDLIB,INBETWEENS,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
use_parentheses = true

[tool.poetry]
name = "aiopinboard"
version = "0.1.1"
description = "A Python 3, asyncio-based library for the Pinboard API"
readme = "README.md"
authors = ["Aaron Bach <bachya1208@gmail.com>"]
license = "MIT"
repository = "https://github.com/bachya/aiopinboard"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
aiohttp = "^3.6.2"
async_timeout = "^3.0.1"
defusedxml = "^0.6.0"
maya = "^0.6.1"
python = "^3.7.0"

[tool.poetry.dev-dependencies]
aresponses = "^2.0.0"
asynctest = "^0.13.0"
pre-commit = "^2.0.1"
pylint = "^2.5.2"
pytest = "^5.3.5"
pytest-asyncio = "^0.10.0"
pytest-cov = "^2.8.1"
